--- a/30-days-challenge/day-1/introduction.ipynb
+++ b/30-days-challenge/day-1/introduction.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56d73e38",
+   "id": "c55237b3",
    "metadata": {},
    "source": [
     "# Exercise: Level 2"
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fae3cb57",
+   "id": "500ad17e",
    "metadata": {},
    "source": [
     "### 1. Write an example for different Python data types such as Number(Integer, Float, Complex), String, Boolean, List, Tuple, Set and Dictionary."
@@ -154,15 +154,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e0a0457d",
+   "execution_count": 13,
+   "id": "9ae87d88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 is int\n",
+      "3.14 is float\n",
+      "5j <class 'complex'>\n",
+      "python <class 'str'>\n",
+      "True <class 'bool'>\n",
+      "['laptop', 'charger', 'mobile phone'] <class 'list'>\n",
+      "('coding', 'hacking', 'linux') <class 'tuple'>\n",
+      "{'name': 'Ackerman', 'Language': 'python'} <class 'dict'>\n"
+     ]
+    }
+   ],
    "source": [
     "a = 4\n",
     "b = 3.14\n",
     "c = 5j\n",
-    "d = \"python\"\n"
+    "d = \"python\"\n",
+    "e = True\n",
+    "f = [\"laptop\", \"charger\",\"mobile phone\"]\n",
+    "g = ('coding','hacking','linux')\n",
+    "h = {'name':\"Ackerman\", 'Language':'python'}\n",
+    "\n",
+    "print (f\"{a} is int\")\n",
+    "print (f\"{b} is float\")\n",
+    "print (f\"{c}\",type(c))\n",
+    "print (d, type(d))\n",
+    "print(e, type(e))\n",
+    "print (f,type(f))\n",
+    "print (g, type(g))\n",
+    "print (h, type(h))"
    ]
   }
  ],
