--- a/30-days-challenge/day-2/variables.ipynb
+++ b/30-days-challenge/day-2/variables.ipynb
@@ -209,12 +209,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6ae54d0e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the radius: 30\n",
+      "The area is 2827.7999999999997\n"
+     ]
+    }
+   ],
    "source": [
-    "# Calculate the area of a circle and assign the value to a variable name of area_of_circle\n"
+    "# Calculate the area of a circle and assign the value to a variable name of area_of_circle\n",
+    "\n",
+    "def area_circle():\n",
+    "    r = int(input(\"Enter the radius: \"))\n",
+    "    a = 3.142 * r**2\n",
+    "    return a\n",
+    "\n",
+    "def main():\n",
+    "    area = area_circle()\n",
+    "    print('The area is',area)\n",
+    "    \n",
+    "main()\n"
    ]
   },
   {
@@ -227,21 +247,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "cb0d60a1",
+   "execution_count": 14,
+   "id": "5715819e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter your first name: Levi\n",
-      "Enter your last name: Ackerman\n",
-      "Whats your country: Kenya\n",
-      "Your age?: 94\n"
+      "Enter the radius: 30\n",
+      "30\n"
      ]
     }
    ],
+   "source": [
+    "# Calculate the circumference of a circle and assign the value to a variable name of circum_of_circle\n",
+    "def circumference():\n",
+    "    r = int(input(\"Enter the radius: \"))\n",
+    "    c = 2 * 3.142 * r\n",
+    "    return(r)\n",
+    "\n",
+    "def main():\n",
+    "    circum_of_circle = circumference()\n",
+    "    print (circum_of_circle)\n",
+    "main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb0d60a1",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "first_name = input(\"Enter your first name: \")\n",
     "last_name = input(\"Enter your last name: \")\n",
@@ -259,41 +296,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "0a435f9d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Here is a list of the Python keywords.  Enter any keyword to get more help.\n",
-      "\n",
-      "False               break               for                 not\n",
-      "None                class               from                or\n",
-      "True                continue            global              pass\n",
-      "__peg_parser__      def                 if                  raise\n",
-      "and                 del                 import              return\n",
-      "as                  elif                in                  try\n",
-      "assert              else                is                  while\n",
-      "async               except              lambda              with\n",
-      "await               finally             nonlocal            yield\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "help('keywords')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0422d33d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
