--- a/30-days-challenge/day-2/variables.ipynb
+++ b/30-days-challenge/day-2/variables.ipynb
@@ -247,8 +247,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "5715819e",
+   "execution_count": 15,
+   "id": "89510e75",
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
      "output_type": "stream",
      "text": [
       "Enter the radius: 30\n",
-      "30\n"
+      "188.51999999999998\n"
      ]
     }
    ],
@@ -265,7 +265,7 @@
     "def circumference():\n",
     "    r = int(input(\"Enter the radius: \"))\n",
     "    c = 2 * 3.142 * r\n",
-    "    return(r)\n",
+    "    return(c)\n",
     "\n",
     "def main():\n",
     "    circum_of_circle = circumference()\n",
